feat: changed cors policies to allowed origins (#14)